Added a cat image and a few more elements

--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1>Hey. I am a big heading<h1>
-<p>Hey, I am a paragraph. Cool huh?</p>
-<a href="https://google.com" target="_blank" title="Let us go to Google">Click me! I am a link</a>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Test page</title>
+</head>
+<body>
+    <h1>Hey. I am a big heading</h1>
+    <p>Hey, I am a <b>paragraph</b>. Cool huh?</p>
+    <a href="https://google.com" target="_blank" title="Let us go to Google">Click me! I am a link</a>
+    <p>My name is:<br>
+    Kitty cat</p>
+    <img src="https://static01.nyt.com/images/2021/09/14/science/07CAT-STRIPES/07CAT-STRIPES-mediumSquareAt3X-v2.jpg">
+</body> 
+</html>
